--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="normal_filter">#8a8889</color>
     <color name="color_option_menu">#FF3990</color>
     <color name="card_BG_color">#F5F5F5</color>
+    <color name="Silpakorn">#45ab87</color>
 
 
 </resources>
