--- a/app/src/main/res/menu/detail_menu.xml
+++ b/app/src/main/res/menu/detail_menu.xml
@@ -14,7 +14,7 @@
         />
 
     <item
-        android:id="@+id/Finish"
+        android:id="@+id/action_finish"
         apps:showAsAction="always"
         android:orderInCategory="101"
         android:enabled="true"
