--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -41,7 +41,7 @@
     <ja.burhanrashid52.photoeditor.PhotoEditorView
         android:id="@+id/Image_preview"
         android:layout_width="match_parent"
-        android:layout_height="460dp"
+        android:layout_height="500dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:scaleType="centerCrop" />
@@ -57,191 +57,193 @@
         android:scrollbars="none">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="horizontal">-
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/btn_Crop"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginHorizontal="16dp"
-                android:padding="16dp"
-                app:cardBackgroundColor="@color/card_BG_color"
-                app:cardElevation="8dp"
+             <android.support.v7.widget.CardView
+                 android:id="@+id/btn_Crop"
+                 android:layout_width="80dp"
+                 android:layout_height="80dp"
+                 android:layout_marginHorizontal="16dp"
+                 android:padding="16dp"
+                 app:cardBackgroundColor="@color/card_BG_color"
+                 app:cardElevation="8dp"
 
-                >
+                 >
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal|center_vertical"
-                    android:orientation="vertical"
-
-
-                    >
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:src="@mipmap/ic_crop"
+                 <LinearLayout
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_gravity="center_horizontal|center_vertical"
+                     android:orientation="vertical"
 
 
-                        />
+                     >
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Crop"
-                        android:textAlignment="center"
-                        android:textColor="@android:color/black"
-                        android:textSize="16dp"
-                        android:textStyle="bold"
-
-                        />
+                     <ImageView
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_gravity="center_horizontal"
+                         android:src="@mipmap/ic_crop"
 
 
-                </LinearLayout>
+                         />
+
+                     <TextView
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:text="Crop"
+                         android:textAlignment="center"
+                         android:textColor="@android:color/black"
+                         android:textSize="16dp"
+                         android:textStyle="bold"
+
+                         />
 
 
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/btn_fliters_list"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginRight="16dp"
-                android:padding="16dp"
-                app:cardBackgroundColor="@color/card_BG_color"
-
-                app:cardElevation="8dp">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal|center_vertical"
-                    android:orientation="vertical"
+                 </LinearLayout>
 
 
-                    >
+             </android.support.v7.widget.CardView>
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:src="@mipmap/ic_img"
+             <android.support.v7.widget.CardView
+                 android:id="@+id/btn_fliters_list"
+                 android:layout_width="80dp"
+                 android:layout_height="80dp"
+                 android:layout_marginRight="16dp"
+                 android:padding="16dp"
+                 app:cardBackgroundColor="@color/card_BG_color"
 
+                 app:cardElevation="8dp">
 
-                        />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Filter"
-                        android:textAlignment="center"
-                        android:textColor="@android:color/black"
-                        android:textSize="16dp"
-                        android:textStyle="bold"
-
-                        />
+                 <LinearLayout
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_gravity="center_horizontal|center_vertical"
+                     android:orientation="vertical"
 
 
-                </LinearLayout>
+                     >
+
+                     <ImageView
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_gravity="center_horizontal"
+                         android:src="@mipmap/ic_img"
 
 
-            </android.support.v7.widget.CardView>
+                         />
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/btn_edit_list"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginRight="16dp"
-                android:padding="16dp"
-                app:cardBackgroundColor="@color/card_BG_color"
-                app:cardElevation="8dp">
+                     <TextView
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:text="Filter"
+                         android:textAlignment="center"
+                         android:textColor="@android:color/black"
+                         android:textSize="16dp"
+                         android:textStyle="bold"
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal|center_vertical"
-                    android:orientation="vertical"
+                         />
 
 
-                    >
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:src="@mipmap/ic_tune"
+                 </LinearLayout>
 
 
-                        />
+             </android.support.v7.widget.CardView>
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Adjust"
-                        android:textAlignment="center"
-                        android:textColor="@android:color/black"
-                        android:textSize="16dp"
-                        android:textStyle="bold"
+             <android.support.v7.widget.CardView
+                 android:id="@+id/btn_edit_list"
+                 android:layout_width="80dp"
+                 android:layout_height="80dp"
+                 android:layout_marginRight="16dp"
+                 android:padding="16dp"
+                 app:cardBackgroundColor="@color/card_BG_color"
+                 app:cardElevation="8dp">
 
-                        />
-
-
-                </LinearLayout>
-
-
-            </android.support.v7.widget.CardView>
-
-            <android.support.v7.widget.CardView
-                android:id="@+id/btn_Paint"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:layout_marginRight="16dp"
-                android:padding="16dp"
-                app:cardBackgroundColor="@color/card_BG_color"
-
-                app:cardElevation="8dp">
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal|center_vertical"
-                    android:orientation="vertical"
+                 <LinearLayout
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_gravity="center_horizontal|center_vertical"
+                     android:orientation="vertical"
 
 
-                    >
+                     >
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:src="@mipmap/ic_paint"
-
-
-                        />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Paint"
-                        android:textAlignment="center"
-                        android:textColor="@android:color/black"
-                        android:textSize="16dp"
-                        android:textStyle="bold"
-
-                        />
+                     <ImageView
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_gravity="center_horizontal"
+                         android:src="@mipmap/ic_tune"
 
 
-                </LinearLayout>
+                         />
+
+                     <TextView
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:text="Adjust"
+                         android:textAlignment="center"
+                         android:textColor="@android:color/black"
+                         android:textSize="16dp"
+                         android:textStyle="bold"
+
+                         />
 
 
-            </android.support.v7.widget.CardView>
+                 </LinearLayout>
 
-        </LinearLayout>
+
+             </android.support.v7.widget.CardView>
+
+             <android.support.v7.widget.CardView
+                 android:id="@+id/btn_Paint"
+                 android:layout_width="80dp"
+                 android:layout_height="80dp"
+                 android:layout_marginRight="16dp"
+                 android:padding="16dp"
+                 app:cardBackgroundColor="@color/card_BG_color"
+
+                 app:cardElevation="8dp">
+
+                 <LinearLayout
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:layout_gravity="center_horizontal|center_vertical"
+                     android:orientation="vertical"
+
+
+                     >
+
+                     <ImageView
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_gravity="center_horizontal"
+                         android:src="@mipmap/ic_paint"
+
+
+                         />
+
+                     <TextView
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:text="Paint"
+                         android:textAlignment="center"
+                         android:textColor="@android:color/black"
+                         android:textSize="16dp"
+                         android:textStyle="bold"
+
+                         />
+
+
+                 </LinearLayout>
+
+
+             </android.support.v7.widget.CardView>
+
+
+
+       </LinearLayout>
     </HorizontalScrollView>
 
 
