--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -49,11 +49,25 @@
                 android:layout_margin="8dp"
                 android:ems="10"
                 android:hint="ชื่อ"
-                android:inputType="textPersonName"
                 android:textSize="16dp"
+                android:textColorHint="@color/grey"
+                android:textColor="@color/textcolor"
+
 
                 />
+            <TextView
 
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="ประเภท:"
+                android:textSize="16dp" />
+            <Spinner android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:id="@+id/Muraltype">
+
+            </Spinner>
             <TextView
 
                 android:layout_width="match_parent"
@@ -71,8 +85,15 @@
                 android:gravity="left|top"
                 android:hint="ลักษณะ"
                 android:inputType="textMultiLine"
+                android:textSize="16dp"
                 android:lines="5"
-                android:maxLines="5"></EditText>
+                android:maxLines="5"
+                android:textColorHint="@color/grey"
+                android:textColor="@color/textcolor"
+
+                >
+
+            </EditText>
 
             <TextView
 
@@ -94,7 +115,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="10"
                     android:textSize="16dp"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    />
 
                 <Button
                     android:id="@+id/ChangeLocation"
@@ -156,18 +178,13 @@
                 android:textStyle="bold"
                 android:text="ตำเเหน่ง:"
                 android:textSize="16dp" />
-
-            <EditText
-                android:id="@+id/Edit_position"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:ems="10"
+            <Spinner android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:gravity="left|top"
-                android:hint="ตำเเหน่ง"
-                android:inputType="textMultiLine"
-                android:lines="2"
-                android:maxLines="2"></EditText>
+                android:id="@+id/Muralpos">
+
+            </Spinner>
+
 
             <TextView
 
@@ -177,18 +194,53 @@
                 android:textSize="16dp"
                 android:textStyle="bold" />
 
-            <EditText
-                android:id="@+id/Edit_Age"
-                style="@android:style/Widget.DeviceDefault.EditText"
-                android:layout_width="100dp"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:ems="10"
-                android:hint="พ,ศ."
-                android:inputType="number"
-                android:textSize="16dp"
+                android:orientation="horizontal"
+                >
+                <EditText
+                    android:id="@+id/Edit_YEAR_FROM"
+                    style="@android:style/Widget.DeviceDefault.EditText"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:ems="10"
+                    android:hint="พ.ศ."
+                    android:inputType="number"
+                    android:textSize="16dp"
+                    android:textColorHint="@color/grey"
+                    android:textColor="@color/textcolor"
 
-                />
+
+                    />
+                <TextView
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+
+                    android:text="ถึง"
+                    android:textSize="16dp"
+                     />
+                <EditText
+                    android:id="@+id/Edit_YEAR_TO"
+                    style="@android:style/Widget.DeviceDefault.EditText"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:ems="10"
+                    android:hint="พ.ศ."
+                    android:inputType="number"
+                    android:textSize="16dp"
+                    android:textColorHint="@color/grey"
+                    android:textColor="@color/textcolor"
+
+
+                    />
+
+
+            </LinearLayout>
 
             <TextView
 
@@ -212,6 +264,9 @@
                     android:hint="กว้าง(ซ.ม.)"
                     android:inputType="number"
                     android:textSize="16dp"
+                    android:textColorHint="@color/grey"
+                    android:textColor="@color/textcolor"
+
 
                     />
                 <EditText
@@ -224,32 +279,15 @@
                     android:hint="ยาว(ซ.ม.)"
                     android:inputType="number"
                     android:textSize="16dp"
+                    android:textColorHint="@color/grey"
+                    android:textColor="@color/textcolor"
+
 
                     />
 
 
             </LinearLayout>
 
-            <TextView
-
-                android:textSize="16dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text="หมายเหตุ:" />
-
-            <EditText
-                android:id="@+id/Edit_ETC"
-                style="@android:style/Widget.DeviceDefault.EditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:ems="10"
-                android:hint="หมายเหตุ"
-                android:inputType="textPersonName"
-                android:textSize="16dp"
-
-                />
         </LinearLayout>
     </ScrollView>
 
