--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,6 +11,15 @@
         android:layout_width="240dp"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:layout_above="@+id/sign_in_button"
+
+        />
+
 
 </RelativeLayout>
 
