--- a/app/src/main/res/layout/activity_main__menu.xml
+++ b/app/src/main/res/layout/activity_main__menu.xml
@@ -1,4 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:id="@+id/dr_view"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+
+
+    >
+    <android.support.design.widget.NavigationView
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+        android:id="@+id/nev_view"
+        app:headerLayout="@layout/navigation_draw_header"
+        app:menu="@menu/nav_menu"
+        >
+
+    </android.support.design.widget.NavigationView> -->
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -54,3 +74,4 @@
         </LinearLayout>
     </TabHost>
 </LinearLayout>
+    <!--</android.support.v4.widget.DrawerLayout> -->
