--- a/app/src/main/res/layout/show_list_my.xml
+++ b/app/src/main/res/layout/show_list_my.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="550dp"
     android:background="@android:color/white"
     >
 
