--- a/app/src/main/res/menu/show_menu.xml
+++ b/app/src/main/res/menu/show_menu.xml
@@ -8,11 +8,10 @@
 
     <item
         android:id="@+id/action_save"
-        apps:showAsAction="always"
-        android:orderInCategory="101"
         android:enabled="true"
-        android:title="Save"
-     />
+        android:orderInCategory="101"
+        android:title="บันทึก"
+        apps:showAsAction="always" />
 
 
 </menu>
