--- a/app/src/main/res/layout/activity_filter.xml
+++ b/app/src/main/res/layout/activity_filter.xml
@@ -14,7 +14,7 @@
     <LinearLayout
         android:id="@+id/fillterlist"
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
         android:padding="16dp"
 
@@ -25,13 +25,13 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
 
->
+            >
 
-        <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:orientation="horizontal">
 
 
                 <TextView
@@ -40,19 +40,40 @@
                     android:layout_height="wrap_content"
                     android:text="ประเภท" />
 
-            <Spinner
-                android:id="@+id/filter_type"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                <Spinner
+                    android:id="@+id/filter_type"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
                 </Spinner>
-        </LinearLayout>
+            </LinearLayout>
 
             <LinearLayout
-                    android:layout_width="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:layout_width="64dp"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginBottom="20dp"
+                    android:text="ผู้จัดทำ" />
+
+                <Spinner
+                    android:id="@+id/filter_user"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                </Spinner>
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:orientation="horizontal"
 
                 >
 
@@ -68,13 +89,13 @@
                     android:layout_height="wrap_content">
 
                 </Spinner>
-</LinearLayout>
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginBottom="20dp"
+                android:orientation="horizontal"
 
                 >
 
@@ -89,8 +110,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="DD/MM/YYYY"
-                    android:inputType="time"
-                    />
+                    android:inputType="time" />
+
                 <EditText
                     android:id="@+id/CreateDateTo"
                     android:layout_width="wrap_content"
@@ -100,11 +121,12 @@
 
                     />
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginBottom="20dp"
+                android:orientation="horizontal"
 
                 >
 
@@ -119,8 +141,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:hint="DD/MM/YYYY"
-                    android:inputType="time"
-                    />
+                    android:inputType="time" />
+
                 <EditText
                     android:id="@+id/YearTo"
                     android:layout_width="wrap_content"
@@ -139,10 +161,9 @@
         </LinearLayout>
 
 
-
     </LinearLayout>
 
-    <ScrollView
+    <!--<ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/fillterlist"
@@ -159,5 +180,5 @@
             android:layout_alignParentTop="true" />
 
     </LinearLayout>
-    </ScrollView>
+    </ScrollView>-->
 </RelativeLayout>
