--- a/app/src/main/res/layout/fragment_black_white.xml
+++ b/app/src/main/res/layout/fragment_black_white.xml
@@ -19,14 +19,14 @@
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
         >
+
         <TextView
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:layout_height="wrap_content"
-            android:text="Color"
-            android:textSize="20sp"
-            />
+            android:text="สี"
+            android:textSize="20sp" />
         <SeekBar
             android:id="@+id/seekbar_bw"
             android:layout_weight="1"
